examples/fail/semantic/struct_duplicate_field.bina
// EXPECT_SEMANTIC_ERROR: duplicate field initializer
struct Point {
    pub x: float64;
    pub y: float64;
}

fn main() -> int {
    let p = Point { x: 1.0, x: 2.0, y: 3.0 };
    return 0;
}
